--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Notes App — Deployed via CodePipeline / CodeBuild / CodeDeploy</h1>
   <p>If you see this page, deployment to /var/www/html worked.</p>
+  <!-- Test update: 16 Sep 2025 -->
   <script src="js/app.js"></script>
 </body>
 </html>
